k8s-monitoring/kube-prometheus-stack/manifests/prometheus-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: kube-prometheus-stack
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - match: Host(`prometheus.127.0.0.1.nip.io`)
    kind: Rule
    services:   
    - kind: Service 
      name: kube-prometheus-stack-prometheus
      port: 9090
